[gd_scene load_steps=4 format=2]

[ext_resource path="res://UI/LanguageOptionButton.gd" type="Script" id=1]
[ext_resource path="res://UI/Settings.gd" type="Script" id=2]
[ext_resource path="res://UI/font.tres" type="DynamicFont" id=3]

[node name="SettingsWindowDialog" type="WindowDialog"]
visible = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -135.0
margin_top = -250.0
margin_right = 135.0
margin_bottom = 232.0
custom_fonts/title_font = ExtResource( 3 )
window_title = "Settings"
script = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0

[node name="LanguageGridContainer" type="GridContainer" parent="VBoxContainer"]
margin_right = 262.0
margin_bottom = 24.0
columns = 2

[node name="LanguageLabel" type="Label" parent="VBoxContainer/LanguageGridContainer"]
margin_right = 129.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 3 )
text = "Language"

[node name="LanguageOptionButton" type="OptionButton" parent="VBoxContainer/LanguageGridContainer"]
margin_left = 133.0
margin_right = 262.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
margin_top = 28.0
margin_right = 262.0
margin_bottom = 32.0

[node name="ShowPlayersInAllTabsCheckBox" type="CheckBox" parent="VBoxContainer"]
margin_top = 36.0
margin_right = 262.0
margin_bottom = 62.0
text = "Show players on the map from all tabs"

[node name="HSeparator3" type="HSeparator" parent="VBoxContainer"]
margin_top = 66.0
margin_right = 262.0
margin_bottom = 70.0

[node name="ExpSuggestionsFlowContainer" type="HFlowContainer" parent="VBoxContainer"]
margin_top = 74.0
margin_right = 262.0
margin_bottom = 124.0

[node name="ExpSuggestionsLabel" type="Label" parent="VBoxContainer/ExpSuggestionsFlowContainer"]
margin_right = 254.0
margin_bottom = 18.0
text = "With the suggested EXP, to level up you must"

[node name="KillLabel" type="Label" parent="VBoxContainer/ExpSuggestionsFlowContainer"]
margin_top = 27.0
margin_right = 16.0
margin_bottom = 45.0
text = "kill"

[node name="EnemiesToLevelUpSpinBox" type="SpinBox" parent="VBoxContainer/ExpSuggestionsFlowContainer"]
margin_left = 20.0
margin_top = 22.0
margin_right = 82.0
margin_bottom = 50.0
min_value = 1.0
max_value = 10000.0
value = 1.0

[node name="EnemiesLabel" type="Label" parent="VBoxContainer/ExpSuggestionsFlowContainer"]
margin_left = 86.0
margin_top = 27.0
margin_right = 149.0
margin_bottom = 45.0
text = "enemies or"

[node name="BossesToLevelUpSpinBox" type="SpinBox" parent="VBoxContainer/ExpSuggestionsFlowContainer"]
margin_left = 153.0
margin_top = 22.0
margin_right = 215.0
margin_bottom = 50.0
min_value = 1.0
max_value = 10000.0
value = 1.0

[node name="BossesLabel" type="Label" parent="VBoxContainer/ExpSuggestionsFlowContainer"]
margin_left = 219.0
margin_top = 27.0
margin_right = 258.0
margin_bottom = 45.0
text = "bosses"

[node name="HOBOSuggestionsGridContainer" type="GridContainer" parent="VBoxContainer"]
margin_top = 128.0
margin_right = 262.0
margin_bottom = 188.0
columns = 2

[node name="BloodOrbsLabel" type="Label" parent="VBoxContainer/HOBOSuggestionsGridContainer"]
margin_top = 5.0
margin_right = 129.0
margin_bottom = 23.0
size_flags_horizontal = 3
text = "Suggested Blood Orbs"

[node name="BloodOrbSpinBox" type="SpinBox" parent="VBoxContainer/HOBOSuggestionsGridContainer"]
margin_left = 133.0
margin_right = 262.0
margin_bottom = 28.0
size_flags_horizontal = 3
step = 0.01
value = 1.0
suffix = "x Lv"

[node name="HighOrbLabel" type="Label" parent="VBoxContainer/HOBOSuggestionsGridContainer"]
margin_top = 37.0
margin_right = 129.0
margin_bottom = 55.0
size_flags_horizontal = 3
text = "Suggested High Orbs"

[node name="HighOrbSpinBox" type="SpinBox" parent="VBoxContainer/HOBOSuggestionsGridContainer"]
margin_left = 133.0
margin_top = 32.0
margin_right = 262.0
margin_bottom = 60.0
size_flags_horizontal = 3
step = 0.01
value = 1.0
suffix = "x Lv"

[node name="ApplySuggestedValuesCheckBox" type="CheckBox" parent="VBoxContainer"]
margin_top = 192.0
margin_right = 262.0
margin_bottom = 218.0
text = "Apply suggested values to all enemies"

[node name="ConfirmationDialog" type="ConfirmationDialog" parent="VBoxContainer/ApplySuggestedValuesCheckBox"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -167.0
margin_top = -54.0
margin_right = 167.0
margin_bottom = 54.0
window_title = "Por favor, Confirma..."
dialog_text = "Applying the suggested values to all enemies will
overwrite the current EXP drops in the entire file.
Are you sure you want to proceed?"

[node name="HSeparator4" type="HSeparator" parent="VBoxContainer"]
margin_top = 222.0
margin_right = 262.0
margin_bottom = 226.0

[node name="ShopPriceSuggestionsFlowContainer" type="HFlowContainer" parent="VBoxContainer"]
margin_top = 230.0
margin_right = 262.0
margin_bottom = 280.0

[node name="ExpSuggestionsLabel" type="Label" parent="VBoxContainer/ShopPriceSuggestionsFlowContainer"]
margin_right = 261.0
margin_bottom = 18.0
text = "With the suggested prices, buying items costs "

[node name="ShopPriceSpinBox" type="SpinBox" parent="VBoxContainer/ShopPriceSuggestionsFlowContainer"]
margin_top = 22.0
margin_right = 62.0
margin_bottom = 50.0
step = 0.01
value = 1.0

[node name="BossesLabel" type="Label" parent="VBoxContainer/ShopPriceSuggestionsFlowContainer"]
margin_left = 66.0
margin_top = 27.0
margin_right = 259.0
margin_bottom = 45.0
text = "times as much as you get selling it"

[node name="ApplySuggestedValuesCheckBox2" type="CheckBox" parent="VBoxContainer"]
margin_top = 284.0
margin_right = 262.0
margin_bottom = 310.0
text = "Apply suggested values to all shop items"

[node name="ShopConfirmationDialog" type="ConfirmationDialog" parent="VBoxContainer/ApplySuggestedValuesCheckBox2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -167.0
margin_top = -54.0
margin_right = 167.0
margin_bottom = 54.0
window_title = "Por favor, Confirma..."
dialog_text = "Applying the suggested values to all enemies will
overwrite the current EXP drops in the entire file.
Are you sure you want to proceed?"

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
margin_top = 314.0
margin_right = 262.0
margin_bottom = 318.0

[node name="RPCGridContainer" type="GridContainer" parent="VBoxContainer"]
margin_top = 322.0
margin_right = 262.0
margin_bottom = 414.0
columns = 2

[node name="RPCHostLabel" type="Label" parent="VBoxContainer/RPCGridContainer"]
margin_right = 129.0
margin_bottom = 28.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 3 )
text = "RPC Host"

[node name="RPCHostLineEdit" type="LineEdit" parent="VBoxContainer/RPCGridContainer"]
margin_left = 133.0
margin_right = 262.0
margin_bottom = 28.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="RPCPortLabel" type="Label" parent="VBoxContainer/RPCGridContainer"]
margin_top = 32.0
margin_right = 129.0
margin_bottom = 60.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 3 )
text = "RPC Port"

[node name="RPCPortSpinBox" type="SpinBox" parent="VBoxContainer/RPCGridContainer"]
margin_left = 133.0
margin_top = 32.0
margin_right = 262.0
margin_bottom = 60.0
size_flags_horizontal = 3
size_flags_vertical = 3
max_value = 65535.0

[node name="RPCPathLabel" type="Label" parent="VBoxContainer/RPCGridContainer"]
margin_top = 64.0
margin_right = 129.0
margin_bottom = 92.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 3 )
text = "RPC Path"

[node name="RPCPathLineEdit" type="LineEdit" parent="VBoxContainer/RPCGridContainer"]
margin_left = 133.0
margin_top = 64.0
margin_right = 262.0
margin_bottom = 92.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="VBoxContainer"]
margin_top = 418.0
margin_right = 262.0
margin_bottom = 436.0
custom_fonts/font = ExtResource( 3 )
text = "RPC User and Password"

[node name="RPCCredentialsGridContainer" type="GridContainer" parent="VBoxContainer"]
margin_top = 440.0
margin_right = 262.0
margin_bottom = 468.0
columns = 2

[node name="UserLineEdit" type="LineEdit" parent="VBoxContainer/RPCCredentialsGridContainer"]
margin_right = 129.0
margin_bottom = 28.0
size_flags_horizontal = 3

[node name="PassLineEdit" type="LineEdit" parent="VBoxContainer/RPCCredentialsGridContainer"]
margin_left = 133.0
margin_right = 262.0
margin_bottom = 28.0
size_flags_horizontal = 3
secret = true

[connection signal="about_to_show" from="." to="." method="_on_SettingsWindowDialog_about_to_show"]
[connection signal="popup_hide" from="." to="." method="_on_SettingsWindowDialog_popup_hide"]
[connection signal="item_selected" from="VBoxContainer/LanguageGridContainer/LanguageOptionButton" to="VBoxContainer/LanguageGridContainer/LanguageOptionButton" method="_on_item_selected"]
[connection signal="toggled" from="VBoxContainer/ApplySuggestedValuesCheckBox" to="." method="_on_ApplySuggestedEXPCheckBox_toggled"]
[connection signal="confirmed" from="VBoxContainer/ApplySuggestedValuesCheckBox/ConfirmationDialog" to="." method="_on_ConfirmationDialog_confirmed"]
[connection signal="toggled" from="VBoxContainer/ApplySuggestedValuesCheckBox2" to="." method="_on_ApplySuggestedValuesCheckBox2_toggled"]
[connection signal="confirmed" from="VBoxContainer/ApplySuggestedValuesCheckBox2/ShopConfirmationDialog" to="." method="_on_ShopConfirmationDialog_confirmed"]
